Update copyright year and add experience text

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
         <div class="absolute inset-0 opacity-10 pointer-events-none" style="background-image: radial-gradient(rgba(130, 10, 209, 0.2) 1px, transparent 1px); background-size: 30px 30px;"></div>
         
         <div class="max-w-5xl mx-auto text-center relative z-10">
+            <!-- NEW: 10+ Years Experience Text -->
+            <p class="text-lg md:text-xl font-semibold text-gray-500 mb-2 tracking-wide uppercase">
+                10+ Years Experience
+            </p>
+            <!-- Original Text -->
             <p class="text-xl md:text-2xl font-bold text-nu-purple-400 mb-4 tracking-widest uppercase opacity-75">
                 Full Stack & Cloud Engineering
             </p>
@@ -334,7 +339,7 @@
                 <!-- Impact Item 2: Software Patent -->
                 <div class="border-b sm:border-b-0 sm:border-r border-nu-purple-700/50 pb-8 sm:pb-0 sm:pr-8">
                     <p class="text-7xl md:text-8xl font-extrabold text-nu-purple-400 mb-2">
-                        <span id="stat-patent" class="impact-number" data-target="2" data-suffix="">0</span>
+                        <span id="stat-patent" class="impact-number" data-target="1" data-suffix="">0</span>
                     </p>
                     <p class="text-lg font-semibold text-white uppercase tracking-wider">Software Patent</p>
                 </div>
@@ -418,7 +423,7 @@
             <!-- Copyright -->
             <div class="mt-12 pt-6 border-t border-gray-700/50 text-center">
                 <p class="text-gray-500 text-sm">
-                    &copy; 2024 Nywton Barros. All rights reserved. | Full Stack Development & Innovation.
+                    &copy; 2025 Nywton Barros. All rights reserved. | Full Stack Development & Innovation.
                 </p>
             </div>
         </div>
@@ -667,7 +672,7 @@
                 closeImageViewer(); 
             }
             
-            // --- NUMBER ANIMATION LOGIC (NEW) ---
+            // --- NUMBER ANIMATION LOGIC (UNCHANGED) ---
 
             const impactSection = document.getElementById('impact');
             const statElements = document.querySelectorAll('.impact-number');
