--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
             <!-- Logo - Now Purple with Avatar/Icon -->
             <a href="#hero" class="text-2xl font-extrabold text-nu-purple-400 hover:text-nu-purple-300 transition duration-300 flex items-center">
                 <i class="fa-solid fa-cube text-3xl mr-3"></i>
-                Software Designer
+                
+                <!-- START: Responsive Logo Text Change -->
+                <span class="sm:hidden">Developer</span>
+                <span class="hidden sm:inline">Software Designer</span>
+                <!-- END: Responsive Logo Text Change -->
             </a>
             
             <!-- Desktop Nav Links - Only Projects and Contact remain, with vertical alignment fixed -->
@@ -423,7 +427,7 @@
             <!-- Copyright -->
             <div class="mt-12 pt-6 border-t border-gray-700/50 text-center">
                 <p class="text-gray-500 text-sm">
-                    &copy; 2025 Nywton Barros. All rights reserved. | Full Stack Development & Innovation.
+                    &copy; 2024 Nywton Barros. All rights reserved. | Full Stack Development & Innovation.
                 </p>
             </div>
         </div>
