Update responsive logo text in index.html

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                 <i class="fa-solid fa-cube text-3xl mr-3"></i>
                 
                 <!-- START: Responsive Logo Text Change -->
-                <span class="sm:hidden">Developer</span>
-                <span class="hidden sm:inline">Software Designer</span>
+                <span class="text-md md:text-3xl">Software Designer</span>
                 <!-- END: Responsive Logo Text Change -->
             </a>
             
