Change button style from rounded-full to rounded-xl

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                 "Transforming complex business logic into <span class="font-semibold text-nu-purple-300">resilient, user-centric software.</span>"
             </h2>
 
-            <a href="#contact" class="mt-12 inline-flex items-center px-10 py-4 text-lg font-bold bg-nu-purple-600 rounded-full shadow-lg shadow-nu-purple-500/40 hover:bg-nu-purple-500 transition duration-300 transform hover:scale-[1.05]">
+            <!-- Updated: Change rounded-full to rounded-xl -->
+            <a href="#contact" class="mt-12 inline-flex items-center px-10 py-4 text-lg font-bold bg-nu-purple-600 rounded-xl shadow-lg shadow-nu-purple-500/40 hover:bg-nu-purple-500 transition duration-300 transform hover:scale-[1.05]">
                 Start a Conversation <i class="fas fa-arrow-right ml-3"></i>
             </a>
         </div>
