Add testimonials section with client feedback
Added a new testimonials section to showcase client feedback with multiple testimonial cards.

--- a/index.html
+++ b/index.html
@@ -411,7 +411,79 @@
     </section>
     <!-- END NEW SOCIAL RESPONSIBILITY SECTION -->
 
-    <!-- 7. FOOTER / CONTACT SECTION (Updated with Avatar and Structured Links) -->
+    <!-- NEW 7. PEOPLE WHO TRUST IN ME SECTION (Testimonials) -->
+    <section id="testimonials" class="py-20 md:py-28 px-4 md:px-8 bg-gray-900/40">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-4xl font-bold text-center mb-16 text-white">People Who <span class="text-nu-purple-400">Trust In Me</span></h2>
+
+            <!-- Testimonials Grid -->
+            <div class="mt-12 grid gap-8 lg:grid-cols-3">
+
+                <!-- Testimonial Card 1 -->
+                <div class="glass-card p-6 rounded-xl flex flex-col justify-between transition duration-300 hover:shadow-nu-purple-500/30 hover:-translate-y-1">
+                    <div>
+                        <i class="fas fa-quote-left text-3xl mb-4 text-nu-purple-400"></i>
+                        <blockquote class="text-lg text-gray-300 italic">
+                            "The attention to detail and proactive communication was outstanding. Nywton not only met the brief but elevated the entire project with innovative solutions."
+                        </blockquote>
+                    </div>
+                    <div class="mt-6 flex items-center">
+                        <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
+                            src="https://placehold.co/100x100/6b00b8/ffffff?text=AV"
+                            onerror="this.onerror=null; this.src='https://placehold.co/100x100/6b00b8/ffffff?text=AV';"
+                            alt="Avatar of Fábio Depiné" />
+                        <div class="ml-4">
+                            <p class="text-lg font-semibold text-white">Fábio Depiné</p>
+                            <p class="text-sm text-nu-purple-400">Banco do Brasil</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Testimonial Card 2 -->
+                <div class="glass-card p-6 rounded-xl flex flex-col justify-between transition duration-300 hover:shadow-nu-purple-500/30 hover:-translate-y-1">
+                    <div>
+                        <i class="fas fa-quote-left text-3xl mb-4 text-nu-purple-400"></i>
+                        <blockquote class="text-lg text-gray-300 italic">
+                            "Responsive, highly skilled, and genuinely invested in our success. They turned a complex challenge into a seamless process. I would recommend their expertise without reservation."
+                        </blockquote>
+                    </div>
+                    <div class="mt-6 flex items-center">
+                        <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
+                            src="https://placehold.co/100x100/820ad1/1f2937?text=SJ"
+                            onerror="this.onerror=null; this.src='https://placehold.co/100x100/820ad1/1f2937?text=SJ';"
+                            alt="Avatar of Sarah Jenkins" />
+                        <div class="ml-4">
+                            <p class="text-lg font-semibold text-white">Rodrigo Rabelo</p>
+                            <p class="text-sm text-nu-purple-400">Intensivet</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Testimonial Card 3 -->
+                <div class="glass-card p-6 rounded-xl flex flex-col justify-between transition duration-300 hover:shadow-nu-purple-500/30 hover:-translate-y-1">
+                    <div>
+                        <i class="fas fa-quote-left text-3xl mb-4 text-nu-purple-400"></i>
+                        <blockquote class="text-lg text-gray-300 italic">
+                            "A game-changer for our workflow. They brought clarity to a very messy situation and delivered a product that was robust, clean, and exactly what we needed, ahead of schedule."
+                        </blockquote>
+                    </div>
+                    <div class="mt-6 flex items-center">
+                        <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
+                            src="https://media.licdn.com/dms/image/v2/D4D03AQFKUoBnx-88mg/profile-displayphoto-scale_200_200/B4DZnn5IrOHsAc-/0/1760532139510?e=1766016000&v=beta&t=7cMQhh5zXEYe4frXd0rfc3ww89z1CffXVjXpXzbKnZg"
+                            onerror="this.onerror=null; this.src='https://placehold.co/100x100/ae7dee/000000?text=DR';"
+                            alt="Avatar of David Reynolds" />
+                        <div class="ml-4">
+                            <p class="text-lg font-semibold text-white">Rafael Carvalho</p>
+                            <p class="text-sm text-nu-purple-400">Founder, Future Ventures</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END PEOPLE WHO TRUST IN ME SECTION -->
+
+    <!-- 8. FOOTER / CONTACT SECTION (Updated with Avatar and Structured Links) -->
     <footer id="contact" class="glass-card py-16 px-4 border-t border-nu-purple-700/50 shadow-inner shadow-black/20">
         <div class="container mx-auto max-w-6xl">
             
