Update team member details and testimonials

--- a/index.html
+++ b/index.html
@@ -429,12 +429,11 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://placehold.co/100x100/6b00b8/ffffff?text=AV"
-                            onerror="this.onerror=null; this.src='https://placehold.co/100x100/6b00b8/ffffff?text=AV';"
+                            src="https://media.licdn.com/dms/image/v2/C4D03AQFXBZjLeiWhGQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1657660338760?e=1766016000&v=beta&t=WjIp_CAy3AgmmC4H9aGmp4Nwzgrj4SSfQ8vp4Own-CI"
                             alt="Avatar of Fábio Depiné" />
                         <div class="ml-4">
                             <p class="text-lg font-semibold text-white">Fábio Depiné</p>
-                            <p class="text-sm text-nu-purple-400">Banco do Brasil</p>
+                            <p class="text-sm text-nu-purple-400">IT Manager, Banco do Brasil</p>
                         </div>
                     </div>
                 </div>
@@ -444,17 +443,17 @@
                     <div>
                         <i class="fas fa-quote-left text-3xl mb-4 text-nu-purple-400"></i>
                         <blockquote class="text-lg text-gray-300 italic">
-                            "Responsive, highly skilled, and genuinely invested in our success. They turned a complex challenge into a seamless process. I would recommend their expertise without reservation."
+                            “Professional, highly responsive, and technically proficient. He streamlined a complex challenge and delivered a seamless experience. I would confidently recommend his expertise.”
                         </blockquote>
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://placehold.co/100x100/820ad1/1f2937?text=SJ"
+                            src="https://media.licdn.com/dms/image/v2/C4E03AQH0E-wv0QqIqQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1640460270976?e=1766016000&v=beta&t=UXEMnLnRkVo3vQmWTI0JH2YNMssH2BFiuRa56uKV-lY"
                             onerror="this.onerror=null; this.src='https://placehold.co/100x100/820ad1/1f2937?text=SJ';"
                             alt="Avatar of Sarah Jenkins" />
                         <div class="ml-4">
                             <p class="text-lg font-semibold text-white">Rodrigo Rabelo</p>
-                            <p class="text-sm text-nu-purple-400">Intensivet</p>
+                            <p class="text-sm text-nu-purple-400">Director, Intensivet</p>
                         </div>
                     </div>
                 </div>
@@ -470,10 +469,9 @@
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
                             src="https://media.licdn.com/dms/image/v2/D4D03AQFKUoBnx-88mg/profile-displayphoto-scale_200_200/B4DZnn5IrOHsAc-/0/1760532139510?e=1766016000&v=beta&t=7cMQhh5zXEYe4frXd0rfc3ww89z1CffXVjXpXzbKnZg"
-                            onerror="this.onerror=null; this.src='https://placehold.co/100x100/ae7dee/000000?text=DR';"
                             alt="Avatar of David Reynolds" />
                         <div class="ml-4">
-                            <p class="text-lg font-semibold text-white">Rafael Carvalho</p>
+                            <p class="text-lg font-semibold text-white">IT Director, Rafael Carvalho</p>
                             <p class="text-sm text-nu-purple-400">Founder, Future Ventures</p>
                         </div>
                     </div>
