Update name and title for Rafael Carvalho

--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
                             src="https://media.licdn.com/dms/image/v2/D4D03AQFKUoBnx-88mg/profile-displayphoto-scale_200_200/B4DZnn5IrOHsAc-/0/1760532139510?e=1766016000&v=beta&t=7cMQhh5zXEYe4frXd0rfc3ww89z1CffXVjXpXzbKnZg"
                             alt="Avatar of David Reynolds" />
                         <div class="ml-4">
-                            <p class="text-lg font-semibold text-white">IT Director, Rafael Carvalho</p>
-                            <p class="text-sm text-nu-purple-400">Founder, Future Ventures</p>
+                            <p class="text-lg font-semibold text-white">Rafael Carvalho</p>
+                            <p class="text-sm text-nu-purple-400">Founder, Egtec</p>
                         </div>
                     </div>
                 </div>
