--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             
             <!-- The One Sentence Impact -->
             <h2 class="text-3xl md:text-4xl font-light text-gray-300 max-w-4xl mx-auto leading-relaxed">
-                "Creating seamless software experiences that <span class="font-semibold text-nu-purple-300">make life easier.</span>"
+                "Crafting elegant software experiences that <span class="font-semibold text-nu-purple-300">make life easier.</span>"
             </h2>
 
             <!-- Updated: Change rounded-full to rounded-xl -->
