Update image URLs in index2.html

--- a/index2.html
+++ b/index2.html
@@ -732,9 +732,9 @@
                         'Social media sharing integration'
                     ],
                     images: [
-                        { url: 'https://github.com/nywton/resume/blob/master/img/doe.jpg?raw=true', alt: 'Doe+ Mobile App Home', caption: 'Main screen of the mobile blood donation app.' },
-                        { url: 'https://placehold.co/700x400/820ad1/ffffff?text=Doe+Image+2', alt: 'Doe+ Donor Profile', caption: 'Donor profile with badges and history.' },
-                        { url: 'https://placehold.co/700x400/54008a/ffffff?text=Doe+Image+3', alt: 'Doe+ Map View', caption: 'Map showing nearby blood donation centers.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/img/doe-1.jpg', alt: 'Doe+ Mobile App Home', caption: 'Main screen of the mobile blood donation app.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/img/doe-2.jpg', alt: 'Doe+ Donor Profile', caption: 'Donor profile with badges and history.' },
+                        { url: 'https://www2.ifal.edu.br/noticias/aplicativo-doe-desenvolvido-no-ifal-maceio-ja-esta-disponivel-para-baixar/doe/@@images/cd375b8b-2a3e-4026-8689-e5b037c2c04e.jpeg', alt: 'Doe+ Map View', caption: 'Map showing nearby blood donation centers.' },
                     ]
                 }
             };
