--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Primary Meta Tags -->
     <title>Senior Software Engineer</title>
     <meta name="title" content="Senior Software Engineer">
-    <meta name="description" content="Senior Software Engineer - Professional Resume">
+    <meta name="description" content="Developer - Professional Resume">
     
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
