Update meta tags for professional resume

--- a/index2.html
+++ b/index2.html
@@ -14,9 +14,25 @@
     <!-- Load Font Awesome 6 CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="Nywton Barros - Senior Software Engineer">
-    <meta name="description" content="Senior Software Engineer specializing in High-Impact Development, Full Stack, and Cloud Architecture.">
+        <!-- Primary Meta Tags -->
+    <title>Senior Software Engineer</title>
+    <meta name="title" content="Senior Software Engineer">
+    <meta name="description" content="Developer - Professional Resume">
+    
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Senior Software Engineer">
+    <meta property="og:description" content="Senior Software Engineer - Professional Resume">
+    <meta property="og:image" content="https://github.com/nywton/resume/blob/master/img/meta-image.png?raw=true">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://nywton.github.io/resume">
+    
+    <!-- Twitter (optional but useful) -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Senior Software Engineer">
+    <meta property="twitter:description" content="Senior Software Engineer - Professional Resume">
+    <meta property="twitter:image" content="https://github.com/nywton/resume/blob/master/img/meta-image.png?raw=true">
 
     <!-- Tailwind Configuration -->
     <script>
