Change title from 'Software Designer' to 'Software Engineer'

--- a/index2.html
+++ b/index2.html
@@ -182,8 +182,8 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <!-- Logo -->
             <a href="#hero" class="text-2xl font-extrabold text-nu-purple-400 hover:text-nu-purple-300 transition duration-300 flex items-center group">
-                <i class="fa-solid fa-cube text-3xl mr-3 transform group-hover:rotate-12 transition-transform duration-300"></i>
-                <span class="text-md md:text-2xl tracking-tight">Software Designer</span>
+                <i class="fa-solid fa-laptop-code text-3xl mr-3 transform group-hover:rotate-12 transition-transform duration-300"></i>
+                <span class="text-md md:text-2xl tracking-tight">Software Engineer</span>
             </a>
             
             <!-- Nav Links -->
