Update image URLs to use raw GitHub links

--- a/index2.html
+++ b/index2.html
@@ -731,9 +731,9 @@
                         'Role-based access control for clinics'
                     ],
                     images: [
-                        { url: '/img/vetias-chat.png', alt: 'Vetias Dashboard Overview', caption: 'Main dashboard view for clinicians.' },
-                        { url: '/img/vetias-dashboard.png', alt: 'Vetias Chat Interface', caption: 'Real-time telemedicine consultation screen.' },
-                        { url: '/img/vetias-agent.png', alt: 'Vetias Appointment Scheduler', caption: 'Admin view of the scheduling system.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/img/vetias-dashboard.png?raw=true', alt: 'Vetias Dashboard Overview', caption: 'Main dashboard view for clinicians.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/img/vetias-chat.png?raw=true', alt: 'Vetias Chat Interface', caption: 'Real-time telemedicine consultation screen.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/img/vetias-agent.png?raw=true', alt: 'Vetias Appointment Scheduler', caption: 'Admin view of the scheduling system.' },
                     ]
                 },
                 'doeplus': {
@@ -748,9 +748,9 @@
                         'Social media sharing integration'
                     ],
                     images: [
-                        { url: '/img/doe-1.jpg', alt: 'Doe+ Mobile App Home', caption: 'Main screen of the mobile blood donation app.' },
-                        { url: '/img/doe-2.jpg', alt: 'Doe+ Donor Profile', caption: 'Donor profile with badges and history.' },
-                        { url: 'https://www2.ifal.edu.br/noticias/aplicativo-doe-desenvolvido-no-ifal-maceio-ja-esta-disponivel-para-baixar/doe/@@images/cd375b8b-2a3e-4026-8689-e5b037c2c04e.jpeg', alt: 'Doe+ Map View', caption: 'Map showing nearby blood donation centers.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/images/portfolio/doemais/banner.jpg?raw=true', alt: 'Doe+ Mobile App Home', caption: 'Main screen of the mobile blood donation app.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/images/portfolio/doemais/banner2.jpg?raw=true', alt: 'Doe+ Donor Profile', caption: 'Donor profile with badges and history.' },
+                        { url: 'https://github.com/nywton/resume/blob/master/images/portfolio/doemais/applicativo.png?raw=true', alt: 'Doe+ Map View', caption: 'Map showing nearby blood donation centers.' },
                     ]
                 }
             };
