--- a/index2.html
+++ b/index2.html
@@ -140,31 +140,47 @@
     </header>
 
     <!-- 1. HERO SECTION (Title + One Sentence Impact) -->
-    <section id="hero" class="relative overflow-hidden pt-16 pb-40 px-4 md:px-8 flex items-center justify-center min-h-[80vh]">    
-        <div class="max-w-5xl mx-auto text-center relative z-10">
-            <!-- NEW: 10+ Years Experience Text -->
-            <p class="text-lg md:text-xl font-semibold text-gray-500 mb-2 tracking-wide uppercase">
-                10+ Years Experience
-            </p>
-            <!-- Original Text -->
-            <p class="text-xl md:text-2xl font-bold text-nu-purple-400 mb-4 tracking-widest uppercase opacity-75">
-                Full Stack & Cloud Engineering
-            </p>
-            <h1 class="text-5xl md:text-7xl font-extrabold text-gray-50 mb-8 hero-title">
-                Nywton Barros
-            </h1>
-            
-            <!-- The One Sentence Impact -->
-            <h2 class="text-3xl md:text-4xl font-light text-gray-300 max-w-4xl mx-auto leading-relaxed">
-                "Crafting elegant software experiences that <span class="font-semibold text-nu-purple-300">make life easier.</span>"
-            </h2>
+    <section id="hero" class="relative overflow-hidden pt-16 pb-40 px-4 md:px-8 flex items-center justify-center min-h-[80vh]">
+    <!-- BACKDROP (GIF / WEBP / JPG) -->
+    <div class="absolute inset-0 -z-10 pointer-events-none">
+        <picture id="hero-media-picture" class="w-full h-full block">
+        <!-- you can serve webp first for performance -->
+        <source srcset="/assets/hero-image.webp" type="image/webp" />
+        <!-- fallback: animated gif or jpeg -->
+        <img
+            id="hero-media-img"
+            src="https://github.com/nywton/resume/blob/master/img/Innovation.gif?raw=true"
+            alt="" aria-hidden="true"
+            class="w-full h-full object-cover opacity-90"
+            loading="eager"
+        />
+        </picture>
 
-            <!-- Updated: Change rounded-full to rounded-xl -->
-            <a href="#contact" class="mt-12 inline-flex items-center px-10 py-4 text-lg font-bold bg-nu-purple-600 rounded-xl shadow-lg shadow-nu-purple-500/40 hover:bg-nu-purple-500 transition duration-300 transform hover:scale-[1.05]">
-                Start a Conversation <i class="fas fa-arrow-right ml-3"></i>
-            </a>
-        </div>
+        <!-- Overlay to improve contrast -->
+        <div class="absolute inset-0 bg-gradient-to-b from-black/30 via-black/10 to-black/40"></div>
+    </div>
+
+    <div class="max-w-5xl mx-auto text-center relative z-10">
+        <p class="text-lg md:text-xl font-semibold text-gray-500 mb-2 tracking-wide uppercase">
+        10+ Years Experience
+        </p>
+        <p class="text-xl md:text-2xl font-bold text-nu-purple-400 mb-4 tracking-widest uppercase opacity-75">
+        Full Stack & Cloud Engineering
+        </p>
+        <h1 class="text-5xl md:text-7xl font-extrabold text-gray-50 mb-8 hero-title">
+        Nywton Barros
+        </h1>
+
+        <h2 class="text-3xl md:text-4xl font-light text-gray-300 max-w-4xl mx-auto leading-relaxed">
+        "Crafting elegant software experiences that <span class="font-semibold text-nu-purple-300">make life easier.</span>"
+        </h2>
+
+        <a href="#contact" class="mt-12 inline-flex items-center px-10 py-4 text-lg font-bold bg-nu-purple-600 rounded-xl shadow-lg shadow-nu-purple-500/40 hover:bg-nu-purple-500 transition duration-300 transform hover:scale-[1.05]">
+        Start a Conversation <i class="fas fa-arrow-right ml-3"></i>
+        </a>
+    </div>
     </section>
+
 
     <!-- 2. CORE COMPETENCIES SECTION (Tiled Content) -->
     <section id="competencies" class="py-20 md:py-28 px-4 md:px-8 bg-gray-900/20">
