Adds missgin link

--- a/index2.html
+++ b/index2.html
@@ -145,7 +145,7 @@
     <div class="absolute inset-0 -z-10 pointer-events-none">
         <picture id="hero-media-picture" class="w-full h-full block">
         <!-- you can serve webp first for performance -->
-        <source srcset="/assets/hero-image.webp" type="image/webp" />
+        <source srcset="https://github.com/nywton/resume/blob/master/img/Innovation.gif?raw=true" type="image/webp" />
         <!-- fallback: animated gif or jpeg -->
         <img
             id="hero-media-img"
