fix hero passing

--- a/index.html
+++ b/index.html
@@ -140,15 +140,18 @@
     </header>
 
     <!-- HERO SECTION -->
-    <section id="hero" class="relative overflow-hidden pt-20 pb-32 px-4 md:px-12">
+    <section id="hero" class="relative overflow-hidden pt-8 pb-16 px-4 md:px-12">
     <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
 
         <!-- LEFT SIDE — TEXT -->
         <div class="text-center md:text-left">
 
-        <p class="text-lg md:text-xl font-semibold text-gray-400 mb-2 tracking-wide uppercase">
-            10+ Years Experience
-        </p>
+        <!-- 10+ Years Tag -->
+        <div class="hero-animate delay-100 mb-4 flex justify-center">
+            <span class="px-4 py-1 rounded-full bg-gray-800/80 border border-gray-700 text-xs md:text-sm font-semibold text-gray-300 uppercase tracking-widest shadow-lg">
+                10+ Years Experience
+            </span>
+        </div>
 
         <p class="text-xl md:text-2xl font-bold text-nu-purple-400 mb-4 tracking-widest uppercase opacity-80">
             Full Stack & Cloud Engineering
