--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <i class="fa-solid fa-cube text-3xl mr-3"></i>
                 
                 <!-- START: Responsive Logo Text Change -->
-                <span class="text-md md:text-3xl">Software Designer</span>
+                <span class="text-md md:text-3xl">Neo</span>
                 <!-- END: Responsive Logo Text Change -->
             </a>
             
@@ -154,7 +154,7 @@
         </div>
 
         <p class="text-xl md:text-2xl font-bold text-nu-purple-400 mb-4 tracking-widest uppercase opacity-80">
-            Full Stack & Cloud Engineering
+            Full Stack Engineer
         </p>
 
         <h1 class="text-5xl md:text-7xl font-extrabold text-gray-50 mb-6">
