--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="text-center md:text-left">
 
         <!-- 10+ Years Tag -->
-        <div class="hero-animate delay-100 mb-4 flex justify-center md:items-start">
+        <div class="hero-animate delay-100 mb-4 flex justify-center md:justify-start">
             <span class="px-4 py-1 rounded-full bg-gray-800/80 border border-gray-700 text-xs md:text-sm font-semibold text-gray-300 uppercase tracking-widest shadow-lg">
                 10+ Years Experience
             </span>
