--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             class="inline-flex items-center px-10 py-4 text-lg font-bold bg-nu-purple-600 
                     rounded-xl shadow-lg shadow-nu-purple-500/40 hover:bg-nu-purple-500 
                     transition duration-300 transform hover:scale-[1.05]">
-            Start a Conversation <i class="fas fa-arrow-right ml-3"></i>
+            Get in Touch <i class="fas fa-arrow-right ml-3"></i>
         </a>
         </div>
 
