fixes friends avatar images

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://media.licdn.com/dms/image/v2/C4D03AQFXBZjLeiWhGQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1657660338760?e=1766016000&v=beta&t=WjIp_CAy3AgmmC4H9aGmp4Nwzgrj4SSfQ8vp4Own-CI"
+                            src="https://nywton.me/friends/fabio.jpeg"
                             alt="Avatar of Fábio Depiné" />
                         <div class="ml-4">
                             <p class="text-lg font-semibold text-white">Fábio Depiné</p>
@@ -470,7 +470,7 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://media.licdn.com/dms/image/v2/C4E03AQH0E-wv0QqIqQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1640460270976?e=1766016000&v=beta&t=UXEMnLnRkVo3vQmWTI0JH2YNMssH2BFiuRa56uKV-lY"
+                            src="https://nywton.me/friends/rodrigo.jpeg"
                             onerror="this.onerror=null; this.src='https://placehold.co/100x100/820ad1/1f2937?text=SJ';"
                             alt="Avatar of Sarah Jenkins" />
                         <div class="ml-4">
@@ -490,7 +490,7 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://media.licdn.com/dms/image/v2/D4D03AQFKUoBnx-88mg/profile-displayphoto-scale_200_200/B4DZnn5IrOHsAc-/0/1760532139510?e=1766016000&v=beta&t=7cMQhh5zXEYe4frXd0rfc3ww89z1CffXVjXpXzbKnZg"
+                            src="https://nywton.me/friends/rafael.jpeg"
                             alt="Avatar of David Reynolds" />
                         <div class="ml-4">
                             <p class="text-lg font-semibold text-white">Rafael Carvalho</p>
