--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://nywton.me/friends/fabio.jpeg"
+                            src="https://nywton.me/img/friends/fabio.jpeg"
                             alt="Avatar of Fábio Depiné" />
                         <div class="ml-4">
                             <p class="text-lg font-semibold text-white">Fábio Depiné</p>
@@ -470,7 +470,7 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://nywton.me/friends/rodrigo.jpeg"
+                            src="https://nywton.me/img/friends/rodrigo.jpeg"
                             onerror="this.onerror=null; this.src='https://placehold.co/100x100/820ad1/1f2937?text=SJ';"
                             alt="Avatar of Sarah Jenkins" />
                         <div class="ml-4">
@@ -490,7 +490,7 @@
                     </div>
                     <div class="mt-6 flex items-center">
                         <img class="w-12 h-12 rounded-full object-cover ring-2 ring-nu-purple-500/50"
-                            src="https://nywton.me/friends/rafael.jpeg"
+                            src="https://nywton.me/img/friends/rafael.jpeg"
                             alt="Avatar of David Reynolds" />
                         <div class="ml-4">
                             <p class="text-lg font-semibold text-white">Rafael Carvalho</p>
