Remove extra quotation mark from blockquote

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     <div>
                         <i class="fas fa-quote-left text-3xl mb-4 text-nu-purple-400"></i>
                         <blockquote class="text-lg text-gray-300 italic">
-                            “Professional, highly responsive, and technically proficient. He streamlined a complex challenge and delivered a seamless experience. I would confidently recommend his expertise.”
+                            “Professional, highly responsive, and technically proficient. He streamlined a complex challenge and delivered a seamless experience.”
                         </blockquote>
                     </div>
                     <div class="mt-6 flex items-center">
